# PayoffDiagrams

./: .env.example  .gitignore  README.md  debug_alpaca_structures.py  debug_backend.py  debug_csv.js  debug_ibkr.py  debug_mu.py  debug_output.txt  main.py  package-lock.json  package.json  pyproject.toml  run.sh  run_backend.sh  tailwind.config.ts  test.sh  test_parsing.js  tsconfig.tsbuildinfo
app/: globals.css  page.tsx
backend/: ARCHITECTURE.md  config.py  ib_client.py  llm_client.py  main.py  massive_client.py
backend/brokers/: alpaca.py  base.py  factory.py  ibkr.py
backend/common/: cache.py  models.py  utils.py
backend/providers/: alpaca.py  base.py  factory.py  ibkr.py  massive.py
backend/tests/: test_ib_client.py  test_ibkr_provider.py  test_integration.py  test_llm_client.py  test_main_endpoints.py  test_massive_client.py  test_prop.py  test_unit.py  test_watchlist.py
components/: file-upload.tsx  payoff-chart.tsx  payoff-dashboard.tsx
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: candlestick-chart.tsx  news-item-list.tsx  news-modal.tsx  payoff-chart.tsx  payoff-dashboard.tsx
frontend/lib/: api-client.ts  black-scholes.ts  date-utils.ts  format-utils.ts  options-utils.ts  payoff-utils.ts  text-utils.ts
frontend/scripts/: test_black_scholes.ts
lib/: payoff-utils.ts
payoff-web/: package-lock.json  package.json  tailwind.config.ts
scripts/: test_payoff_calc.ts  test_t0_sim.ts
tests/: test_payoff_logic.py
(+17 files in other folders)
